--- a/views/scheduled-posts.ejs
+++ b/views/scheduled-posts.ejs
@@ -38,7 +38,7 @@
           <div class="post-card">
             <div class="post-header">
               <div>
-                <h3><%= post.title || 'Untitled' %></h3>
+                <h3><a href="/posts/<%= post.id %>"><%= post.title || 'Untitled' %></a></h3>
                 <span class="badge badge-<%= post.status %>"><%= post.status.toUpperCase() %></span>
               </div>
               <small>
@@ -58,11 +58,12 @@
             </div>
 
             <div class="post-actions">
-              <% if (post.status !== 'published') { %>
-                <button class="btn btn-danger" onclick="deletePost('<%= post.id %>')">
-                  Delete
-                </button>
-              <% } %>
+              <button class="btn" onclick="editPost('<%= post.id %>')">
+                Edit
+              </button>
+              <button class="btn btn-danger" onclick="deletePost('<%= post.id %>')">
+                Delete
+              </button>
             </div>
           </div>
         <% }); %>
@@ -75,6 +76,10 @@
   </footer>
 
   <script>
+    function editPost(postId) {
+      window.location.href = `/posts/edit/${postId}`;
+    }
+
     function deletePost(postId) {
       if (confirm('Are you sure you want to delete this post?')) {
         fetch('/posts/' + postId, { method: 'DELETE' })
