--- a/views/edit-post.ejs
+++ b/views/edit-post.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SMMS - Edit Post</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/style.css?v=3">
   <style>
     .hidden {
       display: none !important;
